--- a/Reply/app/src/main/res/values/strings.xml
+++ b/Reply/app/src/main/res/values/strings.xml
@@ -16,7 +16,10 @@
 <resources>
     <string name="app_name">Reply</string>
     <string name="navigation_drawer">Navigation Drawer</string>
+    <string name="navigation_rail">Navigation Rail</string>
+    <string name="navigation_bottom">Navigation Bottom</string>
     <string name="navigation_back">Back</string>
+    <string name="details_screen">Details Screen</string>
     <string name="tab_inbox">Inbox</string>
     <string name="tab_sent">Sent</string>
     <string name="tab_drafts">Drafts</string>
