--- a/Amphibians/app/src/main/res/values/strings.xml
+++ b/Amphibians/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Amphibians</string>
+    <string name="loading">Loading</string>
+    <string name="loading_failed">Failed to load</string>
 </resources>
