--- a/Movies/app/src/main/res/values/strings.xml
+++ b/Movies/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="placeholder_result">Example Result</string>
     <string name="loading">loading</string>
     <string name="loading_failed">Failed to load</string>
+    <string name="search">Search</string>
 </resources>
