added ability to choose 'top rated' or 'popular' movies to display

--- a/Movies/app/src/main/res/values/strings.xml
+++ b/Movies/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="loading">loading</string>
     <string name="loading_failed">Failed to load</string>
     <string name="search">Search</string>
+    <string name="search_hint">Search for movies</string>
 </resources>
