added back button for fullscreen detail view

--- a/Movies/app/src/main/res/values/strings.xml
+++ b/Movies/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="loading_failed">Failed to load</string>
     <string name="search">Search</string>
     <string name="search_hint">Search for movies</string>
+    <string name="go_back">Go Back</string>
 </resources>
